# Dynamic-Bitvector

./: .gitignore  CMakeLists.txt  README.md  run_inputs.sh
eval/: my_plot_script.R  plots.ipynb
src/: dynamic_bv.h  dynamic_small_bv.h  dynamic_tree_bp.h  main.cpp  naive_bv.h  naive_tree_bp.h  random_generator.h  runner.h  static_small_bv.h  tagged_pointer.h  utility.h
src/oop/: dynamic_bv_oop.h  inner_node.h  leaf.h  node.h
src/variant/: dynamic_bv_variant.h
test/: test_dynamic_bv.cpp  test_dynamic_tree_bp.cpp  test_naive_bv.cpp  test_naive_tree_bp.cpp  test_static_small_bv.cpp
